fixed image rotation bug on safari

--- a/style.css
+++ b/style.css
@@ -279,17 +279,19 @@ h3{
          position: relative;
          box-shadow: none;
          background: none;
+         transform: translateZ(0);
        }
        .card-side {
          height: 35rem;
          border-radius: 15px;
          backface-visibility: hidden;
+         -webkit-backface-visibility: hidden;
          position: absolute;
          top: 0;
          left: 0;
          width: 80%;
          padding:0rem;
-         color: white
+         color: white;
        }
 
        .card-side.back {
